<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SocialBlock</string>
                                                                <string name="app_title">SocialBlock v0.9</string>
        <string name="app_subtitle">Tudatos ido a kepernyon</string>
        <string name="permission_granted">Engedelyezve</string>
        <string name="search_apps_hint">Alkalmazas keresese</string>
        <string name="blocking_enabled_label">Tiltas bekapcsolva</string>
        <string name="select_single_app_title">Valaszd ki a tiltando appot</string>

    <string name="setup_permissions_title">1. Jogosultságok beállítása</string>
    <string name="grant_accessibility">Kisegítő lehetőség engedélyezése</string>
    <string name="grant_usage_access">Használati hozzáférés engedélyezése</string>
    <string name="grant_overlay">Más appok fölé rajzolás engedélyezése</string>
    <string name="enable_device_admin">Eltávolítás elleni védelem bekapcsolása</string>
    <string name="device_admin_explanation">Ez megnehezíti az app gyors eltávolítását vagy a szolgáltatás kikapcsolását.</string>
    <string name="device_admin_disable_warning">Biztos, hogy kikapcsolod a védelmet? Ezzel megkerülöd a saját magad által beállított korlátozást.</string>

    <string name="schedule_title">2. Tiltási idősáv</string>
    <string name="start_hour">Kezdő óra</string>
    <string name="start_minute">Kezdő perc</string>
    <string name="end_hour">Záró óra</string>
    <string name="end_minute">Záró perc</string>
    <string name="require_external_approval">Külső jóváhagyó szükséges a feloldáshoz</string>
    <string name="save_schedule">Idősáv mentése</string>
    <string name="schedule_saved">Elmentve.</string>

    <string name="select_apps_title">3. Blokkolandó appok kiválasztása</string>

    <string name="blocked_message">%1$s jelenleg tiltva van a beállított idősávban.</string>
    <string name="unlocks_remaining">Ezen a héten még %1$d feloldási kérésed van hátra.</string>
    <string name="request_unlock">Feloldás kérése</string>
    <string name="go_home">Vissza a kezdőképernyőre</string>

    <string name="justification_prompt">Miért van szükséged most a feloldásra? (Írd le részletesen és őszintén — ez bekerül a naplóba.)</string>
    <string name="min_justification_length">Minimum %1$d karakter szükséges.</string>
    <string name="justification_too_short">Még %1$d karakter hiányzik.</string>
    <string name="weekly_limit_reached">Elérted a heti feloldási limitet. Próbáld újra jövő héten.</string>
    <string name="submit_justification">Indoklás beküldése</string>

    <string name="waiting_title">Kötelező várakozási idő</string>
    <string name="time_remaining_format">%1$d:%2$02d</string>
    <string name="ready_to_unlock">A várakozás letelt. Utolsó lépés következik.</string>
        <string name="confirm_not_intoxicated">IGEN, biztosan NEM vagyok reszeg vagy betepve.</string>
        <string name="confirm_no_regret">IGEN, biztosan NEM fogom ezt megbanni holnap.</string>

    <string name="typing_challenge_prompt">Gépeld be pontosan, hiba nélkül az alábbi mondatot:</string>
    <string name="final_unlock">Feloldás most (15 percre)</string>

        <string name="require_external_approval_full">Kulso jovahagyas szukseges</string>
        <string name="approval_method_sms">SMS-valasz a segitotol</string>
        <string name="approval_method_callback">Visszahivas a segitotol</string>
        <string name="approval_method_pin">Nehezitett PIN-csere</string>
        <string name="helper_phone_hint">Segito telefonszama</string>
        <string name="manual_pin1_hint">1. PIN (amit a segito ad meg)</string>
        <string name="save_approval_settings">Mentes</string>
        <string name="approval_settings_saved">Elmentve.</string>
        <string name="approval_min_one_required">Legalabb egy modszert valassz.</string>

        <string name="approval_step_title">Kulso jovahagyas szukseges</string>
        <string name="send_sms_button">SMS kuldese a segitonek</string>
        <string name="sms_message_template">Engedelyezed, hogy most feloldjam a tiltast? Ha igen, valaszolj: IGEN</string>
        <string name="sms_waiting">Varakozas a valaszra...</string>
        <string name="sms_approved">Jovahagyva SMS-ben.</string>
        <string name="check_approval_button">Ellenorzes</string>
        <string name="request_callback_button">Visszahivast kerek</string>
        <string name="callback_waiting">Varakozas a visszahivasra...</string>
        <string name="callback_approved">Jovahagyva visszahivassal.</string>
        <string name="pin1_hint">Ird be az 1. PIN-t</string>
        <string name="pin1_wrong">Helytelen PIN.</string>
        <string name="pin1_confirmed_waiting">1. PIN elfogadva. Kotelezo varakozas: 15 perc.</string>
        <string name="pin2_ready">A 2. PIN elkeszult, keresd meg az appban.</string>
        <string name="pin2_hint">Ird be a 2. PIN-t</string>
        <string name="pin2_wrong">Helytelen PIN.</string>
        <string name="pin2_confirmed">Nehezitett PIN teljesitve.</string>
        <string name="hidden_pin2_label">Ideiglenes kod:</string>
</resources>
